salesforce/force-app/main/default/objects/Product_Entitlement__c/Product_Entitlement__c.object-meta.xml
<CustomObject>
    <label>Product Entitlement</label>
    <nameField>
        <label>Product Entitlement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Entitlements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>