salesforce/force-app/main/default/objects/Product_Entitlement__c/fields/Annualized_Value__c.field-meta.xml
<CustomField>
    <fullName>Annualized_Value__c</fullName>
    <label>Annualized Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>