salesforce/force-app/main/default/objects/Product_Entitlement__c/fields/External_Entitlement_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Entitlement_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Entitlement Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>