salesforce/force-app/main/default/objects/Product_Entitlement__c/fields/Licensed_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Licensed_Quantity__c</fullName>
    <label>Licensed Quantity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>